--- a/components/ui/Button/button.module.css
+++ b/components/ui/Button/button.module.css
@@ -12,7 +12,7 @@
   position: relative;
   text-align: center;
   border-radius: 0.45em;
-  font-family: "Arial";
+  font-family: "moughit", sans-serif;
   transition: background 0.3s;
   cursor: pointer;
 }
