--- a/components/sections/Skills/skill.module.css
+++ b/components/sections/Skills/skill.module.css
@@ -26,7 +26,8 @@
   flex-direction: column;
   gap: 1rem;
   border-bottom: 2px solid #fff;
-  padding-bottom: 2rem;
+  border-top: 2px solid #fff;
+  padding: 2rem 0;
 }
 
 .skill_data h2 {
