--- a/components/sections/About/about.module.css
+++ b/components/sections/About/about.module.css
@@ -7,40 +7,52 @@
   height: 100vh;
   padding: 2rem;
   display: flex;
+  align-items: center;
+  /* gap: 3rem; */
+}
+
+.left {
+  display: flex;
+  align-items: center;
   justify-content: center;
-  flex-direction: column;
-  gap: 1.5rem;
+  width: 45%;
+  /* width: 100%; */
 }
+
 .abimage {
-  width: 397px;
-  height: 397px;
-  margin-left: 44px;
-  position: relative;
-  z-index: 1;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
+
+.abimage img {
+  width: 450px;
+  height: 450px;
+  object-fit: cover;
+}
+
+.right {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  width: 55%;
+}
+
 .about_content {
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
 
-.about_content h1 {
-  color: #fff;
-  font-size: 4rem;
-  font-family: "moughit", sans-serif;
-  line-height: 1;
-}
-
 .p {
-  /* padding-top: 1.5rem; */
   display: flex;
   flex-direction: column;
-  grid-area: 1rem;
+  gap: 1rem;
 }
 
 .p p {
   color: #d8d8d8;
-  font-size: 1.2rem;
+  font-size: 1rem;
   font-family: "moughit", sans-serif;
-  line-height: 2;
+  line-height: 1.5;
 }
