--- a/components/sections/About/about.module.css
+++ b/components/sections/About/about.module.css
@@ -8,7 +8,7 @@
   padding: 2rem;
   display: flex;
   align-items: center;
-  /* gap: 3rem; */
+  gap: 3rem;
 }
 
 .left {
@@ -23,6 +23,9 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .abimage img {
