--- a/components/sections/contact/Contact.module.css
+++ b/components/sections/contact/Contact.module.css
@@ -1,9 +1,110 @@
 .contact {
-    width: 100%;
-    height: 100vh;
-    padding: 2rem;
-    background-image: url("/assets/images/hero-bg.png");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+  width: 100%;
+  height: 100vh;
+  padding: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url("/assets/images/hero-bg.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.form-container {
+  width: 600px;
+  background-color: transparent;
+  border: 2px solid transparent;
+  background-image: linear-gradient(145deg, transparent 35%, #e81cff, #40c9ff);
+  background-origin: border-box;
+  background-clip: padding-box, border-box;
+  padding: 40px 32px;
+  font-size: 16px;
+  font-family: inherit;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  box-sizing: border-box;
+  border-radius: 20px;
+  background-size: 200% 100%;
+  animation: gradient 5s ease infinite;
+  backdrop-filter: blur(8px); /* Frosted glass effect */
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
   }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.form-container button:active {
+  scale: 0.95;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+
+.form-group label {
+  color: #bbbbbb;
+  font-weight: 600;
+  font-size: 14px;
+}
+
+.form-group input,
+.form-group textarea {
+  width: 100%;
+  padding: 14px 18px;
+  border-radius: 10px;
+  color: #fff;
+  font-family: inherit;
+  background-color: rgba(255, 255, 255, 0.05);
+  border: 1px solid #414141;
+  font-size: 15px;
+}
+
+.form-group textarea {
+  resize: none;
+  height: 120px;
+}
+
+.form-group input:focus,
+.form-group textarea:focus {
+  outline: none;
+  border-color: #e81cff;
+}
+
+.form-submit-btn {
+  font-family: inherit;
+  color: #717171;
+  font-weight: 600;
+  width: 50%;
+  background: #313131;
+  border: 1px solid #414141;
+  padding: 14px 20px;
+  font-size: 15px;
+  cursor: pointer;
+  border-radius: 8px;
+  transition: all 0.3s ease;
+}
+
+.form-submit-btn:hover {
+  background-color: #fff;
+  color: #000;
+  border-color: #fff;
+}
