--- a/components/sections/About/about.module.css
+++ b/components/sections/About/about.module.css
@@ -8,6 +8,7 @@
   padding: 2rem;
   display: flex;
   align-items: center;
+  z-index: -1;
   gap: 3rem;
 }
 
@@ -16,6 +17,7 @@
   align-items: center;
   justify-content: center;
   width: 45%;
+  z-index: 1;
   /* width: 100%; */
 }
 
@@ -26,12 +28,15 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 10;
+  
 }
 
 .abimage img {
   width: 450px;
   height: 450px;
   object-fit: cover;
+  z-index: 5;
 }
 
 .right {
@@ -45,6 +50,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  z-index: 5;
 }
 
 .p {
