--- a/components/sections/contact/Contact.module.css
+++ b/components/sections/contact/Contact.module.css
@@ -1,7 +1,7 @@
 .contact {
   width: 100%;
   height: 100vh;
-  padding: 2rem;
+  padding: 4rem 2rem;
   background-color: rgba(0, 4, 38, 1);
   background-size: cover;
   background-position: center;
@@ -10,15 +10,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column; /* This keeps your title and form stacked */
-  gap: 2rem; /* Add some spacing between the button and the form */
+  flex-direction: column;
+  gap: 5rem;
 }
-
 
 .form-container {
   width: 50%;
   background: linear-gradient(rgba(0, 4, 38, 1), rgba(0, 4, 38, 1)) padding-box,
-              linear-gradient(145deg, transparent 35%,#e81cff, #40c9ff) border-box;
+    linear-gradient(145deg, transparent 35%, #e81cff, #40c9ff) border-box;
   border: 2px solid transparent;
   padding: 20px 24px;
   font-size: 20px;
@@ -37,7 +36,6 @@
   0% {
     background-position: 0% 50%;
   }
-  
 
   50% {
     background-position: 100% 50%;
@@ -81,7 +79,7 @@
 .form-container .form-group label {
   display: block;
   margin-bottom: 5px;
-  color: ;
+  /* color: ; */
   font-weight: 600;
   font-size: 12px;
 }
@@ -143,7 +141,6 @@
 
   transition: 0.5s;
   transition-property: box-shadow;
-  min-height: 5rem;
 
   color: transparent;
   text-shadow: 0 0 0 #fff;
