--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,3 +28,11 @@
   src: url("../public/raleway/Raleway-Light.ttf");
   font-weight: 200;
 }
+@keyframes scroll {
+  0% { transform: translateX(0%); }
+  100% { transform: translateX(-50%); }
+}
+
+.animate-scroll {
+  animation: scroll 20s linear infinite;
+}
