--- a/components/sections/Projects/project.module.css
+++ b/components/sections/Projects/project.module.css
@@ -2,8 +2,5 @@
   width: 100%;
   height: 100vh;
   padding: 2rem;
-  background-image: url("/assets/images/about-bg.png");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+  background-color: rgb(1, 3, 20);
 }
