--- a/components/effects/marquee/marque.module.css
+++ b/components/effects/marquee/marque.module.css
@@ -1,55 +1,39 @@
 .container {
-    position: relative;
-    width: 100%;
-    height: 50vh;
-    overflow: hidden;
-  }
-  
-  .backMarquee {
-    position: absolute;
-    top: 10%;
-    left: 0;
-    width: 100%;
-    transform: rotate(5deg);
-    border-top: 2px solid #a855f7;
-    border-bottom: 2px solid #d8b4fe;
-    z-index: 1;
-    opacity: 0.6;
-  }
-  
-  .frontMarquee {
-    position: absolute;
-    top: 15%;
-    left: 0;
-    width: 100%;
-    transform: rotate(5deg);
-    border-top: 2px solid white;
-    border-bottom: 2px solid white;
-    background-color: rgba(255, 255, 255, 0.1);
-    z-index: 2;
-  }
-  
-  .frontMarquee h1, .backMarquee h1 {
-    font-size: 3rem;
-    color: white;
-    white-space: nowrap;
-  }
-  
-  .rocket {
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%) translateY(-30%) rotate(-15deg);
-    font-size: 5rem;
-    color: #fff;
-    z-index: 3;
-    animation: float 2s ease-in-out infinite;
-  }
-  
-  /* Floating animation */
-  @keyframes float {
-    0% { transform: translateX(-50%) translateY(-30%) rotate(-15deg); }
-    50% { transform: translateX(-50%) translateY(-50%) rotate(-15deg); }
-    100% { transform: translateX(-50%) translateY(-30%) rotate(-15deg); }
-  }
-  
+  position: relative;
+  width: 100%;
+  height: 18vh;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Back Marquee */
+.frontMarquee {
+  width: 100%;
+  height: 10vh;
+  background-color: red;
+  transform: rotate(2deg);
+  overflow: hidden;
+}
+
+/* Front Marquee */
+.backMarquee {
+  position: absolute;
+  top: 30%;
+  left: 0;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 10vh;
+  background-color: green;
+  transform: rotate(-2deg);
+  overflow: hidden;
+}
+
+.frontMarquee h1 {
+  color: #fff;
+  font-family: "moughit", sans-serif;
+  font-size: 2.8rem;
+  margin: 0 1.5rem;
+  text-align: center;
+}
