--- a/components/sections/contact/Contact.module.css
+++ b/components/sections/contact/Contact.module.css
@@ -2,10 +2,7 @@
   width: 100%;
   height: 100vh;
   padding: 4rem 2rem;
-  background-color: rgba(0, 4, 38, 1);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+  background-color: rgb(1, 3, 20);
   z-index: 0;
 
   display: flex;
@@ -63,7 +60,7 @@
 
 .form-container button:active {
   color: #ffffff;
-  background: #7b4ae2;
+  background: transparent;
   border: 1px solid #7b4ae2;
   text-shadow: 0 0 5px #ffffff, 0 0 10px #ffffff, 0 0 20px #ffffff;
   box-shadow: 0 0 5px #7b4ae2, 0 0 20px #7b4ae2, 0 0 50px #7b4ae2,
@@ -99,7 +96,7 @@
   border-radius: 8px;
   color: #fff;
   font-family: inherit;
-  background-color: #7b4ae2;
+  background-color: transparent;
   border: 1px solid #414141;
   font-size: 15px;
 }
